# matrix-rich-text-editor

./: .gitignore  AUTOMERGE_MIGRATION_PLAN.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  build_xcframework.sh  newdiffplan.md  rust-toolchain.toml
.github/workflows/: add-new-issues-to-verticals-project.yml  android.yml  deploy-web-demo.yml  ios.yml  publish.yml  react-build.yml  rust.yml  sonarqube.yml  static_analyisis.yml  tag-release.yml  triage-labelled.yml  wasm.yml
bindings/wysiwyg-ffi/: Cargo.toml
bindings/wysiwyg-ffi/src/: ffi_block_projection.rs  ffi_collaboration_error.rs  ffi_composer_model.rs  ffi_composer_update.rs  ffi_link_actions.rs  ffi_pattern_key.rs  ffi_text_update.rs  into_ffi.rs  lib.rs
bindings/wysiwyg-wasm/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
bindings/wysiwyg-wasm/src/: lib.rs
crates/matrix_mentions/: Cargo.toml
crates/wysiwyg/: Cargo.toml
crates/wysiwyg/src/: block_projection.rs  composer_model.rs  composer_model_interface.rs  dom.rs  lib.rs  pattern_key.rs
crates/wysiwyg/src/automerge_model/: base.rs  block_ops.rs  block_projections.rs  collaboration.rs  content_access.rs  formatting.rs  links.rs  mentions.rs  mod.rs  selection.rs  spans_html.rs  state_query.rs  text_ops.rs  trait_impl.rs  undo_redo.rs
crates/wysiwyg/src/composer_model/: example_format.rs  lists.rs  new_lines.rs  replace_html.rs
crates/wysiwyg/src/dom/: dom_list_methods.rs  dom_methods.rs  dom_struct.rs  html_source.rs  insert_node_at_cursor.rs  iter.rs  parser.rs  range.rs
crates/wysiwyg/src/dom/nodes/: container_node.rs  dom_node.rs  text_node.rs
crates/wysiwyg/src/dom/parser/: padom_creator.rs  panode_container.rs  parse.rs
crates/wysiwyg/src/tests/: test_deleting.rs  test_menu_action.rs  test_set_content.rs
crates/wysiwyg/tests/: tests.rs
